# blitter-api/src/main/resources/openapi-blitter-0.2.0-resolved.yaml
@@ -1,12 +1,10 @@
----
 openapi: 3.0.0
 info:
   title: blitter
-  description: The API for the blitter project
+  description: A RESTful API for creating and managing bleats
   version: 0.2.0
 servers:
   - url: https://localhost:8080
-#- url: https://virtserver.swaggerhub.com/augustine98/birdPerson/0.2.0
     description: SwaggerHub API Auto Mocking
 paths:
   /register:
@@ -27,6 +25,7 @@ paths:
       security: []
   /login:
     post:
+      deprecated: true
       tags:
       - Authentication
       summary: Logs in and returns the authentication  cookie
@@ -53,20 +52,46 @@ paths:
     get:
       tags:
       - Bleats
-      description: returns all registered bleats
+      summary: Get a list of bleats
+      description: Returns a list of bleats with pagination
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 1
+          description: The page number to retrieve (defaults to 1)
+        - in: query
+          name: per_page
+          schema:
+            type: integer
+            default: 10
+          description: The number of items per page to retrieve (defaults to 10)
       operationId: getBleats
       responses:
         "200":
-          description: All the bleats
+          description: A list of bleats
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BleatsRes'
+                type: object
+                properties: 
+                  bleats:
+                    $ref: '#/components/schemas/BleatsRes'
+                  page:
+                    type: integer
+                  per_page:
+                    type: integer
+                  total:
+                    type: long
+        '500':
+          description: Internal server error
       x-swagger-router-controller: Bleats
     post:
       tags:
       - Bleats
-      description: publish a bleat
+      summary: Create a new bleat
+      description: Creates a new bleat
       operationId: postBleat
       requestBody:
         content:
@@ -77,12 +102,16 @@ paths:
               message: This is a new bleat
               author: Woody
       responses:
-        "200":
-          description: Return bleat
+        "201":
+          description: The bleat was created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/BleatRes'
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
   /bleats/{id}:
     get:
       tags:
